# vmate

./: Dockerfile  README.md  dashboard.json  pyproject.toml
.github/workflows/: ci.yml
app/: collector.py  config.py  discovery.py  errors.py  main.py  metrics.py
