[project]
name = "vmate"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "prometheus-client>=0.20",
    "kubernetes>=29",
    "pydantic-settings>=2.3",
]

[project.scripts]
serve = "app.main:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
